fix overflow-x

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,15 +9,9 @@ body {
     background-size: cover;
     background-color: black;
     color: white;
-    overflow-x: hidden;
     font-family: 'Quicksand', sans-serif;
+    overflow-y: hidden;
 }
-
-.bg-body {
-    overflow-x: hidden;
-    width: 100vw;
-}
-
 nav {
     display: flex;
     justify-content: space-between;
@@ -105,8 +99,14 @@ nav ul a:hover {
 @media screen and (max-width: 576px) {
 
     nav {
+        height: 100vh;
         overflow-x: hidden;
+        position: relative;
+        align-items: flex-start;
+        padding-top:14px;
+        width: 100%;
     }
+
     nav ul {
         position: absolute;
         top: 0;
@@ -116,18 +116,26 @@ nav ul a:hover {
         justify-content: space-evenly;
         align-items: center;
         width: 100%;
-        z-index: -2;
         background-color: rgba(255, 255, 255, 0.1);
-        transform: translateX(100%);
         transition: all 1s;
+        transform: translateX(100%);
     }
+
+    /* .bg-body {
+        height: fit-content;
+        position: relative;
+        width: 100vw;
+        border: 1px solid wheat;
+        overflow-x: hidden ;
+        height: 100vh;
+    } */
 
     nav .menu-toggle {
         display: flex;
     }
 
     nav ul.slide {
-        transform: translateX(0);
+        transform: translateX(0%);
     }
 
 }
